refactor(product): refactor product dto